chore：对比展示修改

--- a/Cursor 简单文件 test/compare/ipa_comparison_report.html
+++ b/Cursor 简单文件 test/compare/ipa_comparison_report.html
@@ -250,15 +250,14 @@
                     <span class="stat-number increase">
                         +7.78 MB
                     </span>
-                    <span>IPA文件变化</span>
+                    <span>IPA体积变化</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">
-                        7.76 MB
+                    <span class="stat-number increase">
+                        +18.41 MB
                     </span>
-                    <span>各类型变化总和</span>
+                    <span>真实体积变化</span>
                 </div>
-                <div class="stat-item"><span class="stat-number">22.92 KB</span><span>ZIP头/元数据差异</span></div>
             </div>
         </div>
 
@@ -274,7 +273,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - Flutter.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +4.74 MB</span>
+                        <span class="resource-change change-increase">IPA增加 +4.74 MB，真实增加 +10.66 MB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -334,7 +333,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - App.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +2.60 MB</span>
+                        <span class="resource-change change-increase">IPA增加 +2.60 MB，真实增加 +6.41 MB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -380,7 +379,7 @@
                             <span class="expand-icon">▶</span>
                             其他文件
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +186.21 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +186.21 KB，真实增加 +315.29 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -433,7 +432,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - sqflite.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +66.46 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +66.46 KB，真实增加 +273.61 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -479,7 +478,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - image_picker_ios.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +45.62 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +45.62 KB，真实增加 +204.31 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -525,7 +524,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - flutter_boost.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +43.15 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +43.15 KB，真实增加 +205.60 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -571,7 +570,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - path_provider.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +31.76 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +31.76 KB，真实增加 +140.34 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -617,7 +616,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - fluttertoast.framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +27.98 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +27.98 KB，真实增加 +124.26 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -663,7 +662,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - flutter_keyboard_visib....framework
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +11.08 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +11.08 KB，真实增加 +80.55 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -709,7 +708,7 @@
                             <span class="expand-icon">▶</span>
                             配置文件
                         </span>
-                        <span class="resource-change change-increase">IPA增加 +0.74 KB</span>
+                        <span class="resource-change change-increase">IPA增加 +0.74 KB，真实增加 +1.52 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -740,7 +739,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - sqlcipher.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.01 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.01 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -765,7 +764,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - WCDBSwift.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.01 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.01 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -788,34 +787,9 @@
                     <div class="resource-header" onclick="toggleDetails(this)">
                         <span class="resource-name">
                             <span class="expand-icon">▶</span>
-                            Framework - PLPrinterSDK.framework
-                        </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.00 KB</span>
-                    </div>
-                    <div class="details-panel">
-                        <table class="file-table">
-                            <thead>
-                                <tr>
-                                    <th>文件路径</th>
-                                    <th>旧版本大小</th>
-                                    <th>新版本大小</th>
-                                    <th>变化</th>
-                                    <th>状态</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                        <p style="margin-top: 10px; color: #6c757d; font-size: 0.9em;">注: Framework - PLPrinterSDK.framework类型共有 3 个文件，仅显示变化较大的 0 个</p>
-                    </div>
-                </div>
-                <div class="resource-item">
-                    <div class="resource-header" onclick="toggleDetails(this)">
-                        <span class="resource-name">
-                            <span class="expand-icon">▶</span>
                             Framework - sqliterk.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.00 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.00 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -838,9 +812,34 @@
                     <div class="resource-header" onclick="toggleDetails(this)">
                         <span class="resource-name">
                             <span class="expand-icon">▶</span>
+                            Framework - PLPrinterSDK.framework
+                        </span>
+                        <span class="resource-change change-decrease">IPA减少 -0.00 KB，真实减少 -0.00 KB</span>
+                    </div>
+                    <div class="details-panel">
+                        <table class="file-table">
+                            <thead>
+                                <tr>
+                                    <th>文件路径</th>
+                                    <th>旧版本大小</th>
+                                    <th>新版本大小</th>
+                                    <th>变化</th>
+                                    <th>状态</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                        <p style="margin-top: 10px; color: #6c757d; font-size: 0.9em;">注: Framework - PLPrinterSDK.framework类型共有 3 个文件，仅显示变化较大的 0 个</p>
+                    </div>
+                </div>
+                <div class="resource-item">
+                    <div class="resource-header" onclick="toggleDetails(this)">
+                        <span class="resource-name">
+                            <span class="expand-icon">▶</span>
                             Framework - libpag.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.00 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.00 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -865,7 +864,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - FT800SDK.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.00 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.00 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -890,7 +889,7 @@
                             <span class="expand-icon">▶</span>
                             Framework - WewinPrintLib.framework
                         </span>
-                        <span class="resource-change change-decrease">IPA减少 -0.00 KB</span>
+                        <span class="resource-change change-decrease">IPA减少 -0.00 KB，真实减少 -0.00 KB</span>
                     </div>
                     <div class="details-panel">
                         <table class="file-table">
@@ -912,7 +911,7 @@
             </div>
         </div>
         <div class="timestamp">
-            报告生成时间: 2025-09-30 14:38:37
+            报告生成时间: 2025-09-30 14:58:01
         </div>
     </div>
 </body>
